멀티 프로필 배포 설정 추가

--- a/build.gradle
+++ b/build.gradle
@@ -78,3 +78,8 @@ compileQuerydsl {
     options.annotationProcessorPath = configurations.querydsl
 }
 //querydsl 추가 끝
+
+bootRun {
+    String activeProfile = System.properties['spring.profiles.active']
+    systemProperty "spring.profiles.active", activeProfile
+}
