--- a/.gitignore
+++ b/.gitignore
@@ -63,4 +63,5 @@ out/
 
 ## properties
 src/main/resources/application.properties
+src/main/resources/application-prod.properties
 src/test/resources/application.properties
