--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,9 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
     implementation 'mysql:mysql-connector-java' // runtimeOnly했더니 컴파일 문제인지 서버 켤때  에러나서 수정
+
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.data:spring-data-redis'
 
     //querydsl 추가 : springBoot 2.6 이상
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
