--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.data:spring-data-redis'
+    implementation 'redis.clients:jedis:3.8.0'
 
     //querydsl 추가 : springBoot 2.6 이상
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
