--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,7 @@ dependencies {
 
     // batch
     implementation 'org.springframework.boot:spring-boot-starter-batch'
+    implementation 'org.springframework.retry:spring-retry:1.3.1'
 
     // test
 
